--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="百度搜索框">
   <meta charset="utf-8">
   <title>baidu search-box</title>
-  <link rel="stylesheet" href="index.csss">
+  <link rel="stylesheet" href="index.css">
   <style type="text/css">
     .icon {
        width: 1em; height: 1em;
